[tool.poetry]
name = "dradon"
version = "0.1.0"
description = "Discrete Radon Transform for Line Detection"
authors = ["Alexander Sribnyak <alexandersribnyak@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/sribnyak/discrete-radon-transform"
repository = "https://github.com/sribnyak/discrete-radon-transform"
keywords = ["radon transform", "image processing"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
numpy = "^1.26.4"
opencv-python = "^4.9.0.80"

[tool.poetry.scripts]
dradon = "dradon.console:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
coverage = {extras = ["toml"], version = "^7.5.1"}
pytest-cov = "^5.0.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["dradon"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
