[tool.poetry]
name = "dradon"
version = "0.1.0"
description = "Discrete Radon Transform for Line Detection"
authors = ["Alexander Sribnyak <alexandersribnyak@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/sribnyak/discrete-radon-transform"
repository = "https://github.com/sribnyak/discrete-radon-transform"
keywords = ["radon transform", "image processing"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
numpy = "^1.26.4"
opencv-python = "^4.9.0.80"

[tool.poetry.scripts]
dradon = "dradon.console:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
coverage = {extras = ["toml"], version = "^7.5.1"}
pytest-cov = "^5.0.0"
black = "^24.4.2"
flake8 = "^7.0.0"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^24.4.26"
flake8-import-order = "^0.18.2"
safety = "^3.2.0"
flake8-docstrings = "^1.7.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["dradon"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
